--- a/easter_eggs_sentences.yml
+++ b/easter_eggs_sentences.yml
@@ -24,8 +24,38 @@ sentences:
   - "I speak fluent SKU"
   - "Supply chain problems require supply chain solutions... and coffee"
   - "ERP stands for Extremely Resistant to Progress"
-  - "My supply chain is like a box of chocolates - full of surprises"
+  - "My supply chain is like a box of chocolates - You never know what you're gonna get"
   - "Procurement specialist: Professional negotiator of reality vs expectations"
   - "\"The system is down\" - Ancient supply chain proverb"
   - "I automate supply chains because manually creating chaos is too much work"
-  - "Just another day in supply chain paradise" 
+  - "Just another day in supply chain paradise"
+  - "One does not simply walk into the warehouse without a safety vest"
+  - "With great inventory comes great responsibility"
+  - "I'll make them a delivery time they can't refuse"
+  - "Houston, we have a stockout problem"
+  - "May the forecast be with you"
+  - "To infinity and beyond... our warehouse capacity"
+  - "Winter is coming... better check those safety stocks"
+  - "I see dead SKUs"
+  - "You shall not pass... without proper documentation"
+  - "The first rule of Supply Chain Club: Always talk about Supply Chain Club"
+  - "I feel the need... the need for inventory speed"
+  - "Life is like a supply chain, always full of surprises"
+  - "Do you want to build a warehouse?"
+  - "Just keep shipping, just keep shipping"
+  - "Why so stockout?"
+  - "I'll be back... with your backorder"
+  - "Hasta la vista, legacy system"
+  - "Draw me like one of your French curves (forecasting)"
+  - "The warehouse is strong with this one"
+  - "I am the one who stocks"
+  - "Welcome to the real world of supply chain, Neo"
+  - "What we do in supply chain echoes in eternity"
+  - "This is Sparta! No, this is just the receiving dock"
+  - "In supply chain, no one can hear you scream"
+  - "Here's looking at you, inventory"
+  - "Roads? Where we're going, we need logistics networks"
+  - "I see supply chain people... they don't know they're stockouts"
+  - "You're gonna need a bigger warehouse"
+  - "Elementary, my dear warehouse manager"
+  - "I am serious, and don't call me Safety Stock" 
